# code-video-generator

./: .flake8  .gitignore  .pylintrc  .readthedocs.yml  Makefile  Readme.md  code.py  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: automations.yml  base-image.yml  image.yml  release.yml  test.yml
code_video/: __init__.py  autoscale.py  code_walkthrough.py  comment_parser.py  layout.py  library.py  music.py  player.py  scene.py  sequence.py  widgets.py
code_video_cli/: __init__.py
docker/: Dockerfile  base.Dockerfile
docs/: reinstall-cario-step-1.txt  reinstall-cario-step-2.txt
docs/src/: about.md  changelog.md  code_video-animations-reference.md  code_video-helpers-reference.md  code_video-widgets-reference.md  code_video_CodeScene-reference.md  code_video_SequenceDiagram-reference.md  examples.md  index.md  installation.md  reference.md
docs/theme/: footer.html
examples/: boxes.py  commented.py  highlights.py  intro.py  sequence-diagram.py  simple.py
patches/: 639.diff
