[metadata]
name = code-videos
description = Generate videos showing off code
author = Don Brown
author_email = mrdon@twdata.org
maintainer = Don Brown
maintainer_email = mrdon@twdata.org
long_description = file: README.md
long_description_content_type = text/markdown
license = APLv2 License
url = https://github.com/mrdon/code-videos
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development
    Programming Language :: Python :: 3.8
keywords =
    video

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    manimce >= 0.1.0
setup_requires =
    setuptools_scm

[options.extras_require]
dev =
    pytest
    black
test =
    pytest
doc =
    sphinx
    sphinx_rtd_theme
