[metadata]
name = code-video-generator
description = Generate videos that walkthrough code
author = Don Brown
author_email = dbrown@sleuth.io
maintainer = Don Brown
maintainer_email = dbrown@sleuth.io
long_description = file: README.md
long_description_content_type = text/markdown
license = APLv2 License
url = https://github.com/sleuth-io/code-video-generator
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development
    Programming Language :: Python :: 3.8
keywords =
    video

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    manim >= 0.10.0
    pyglet >= 1.5.8
    ffmpeg-python >= 0.2.0
    wrapt >= 1.12.1
    librosa >= 0.8.0

setup_requires =
    setuptools_scm

[options.extras_require]
dev =
    pytest
    flake8
    pylint
    black
    reorder-python-imports
    mkdocs>=1.1
    mkdocstrings>=0.13.6
    mkdocs-material>=6.1.5
test =
    pytest
doc =
    mkdocs>=1.1
    mkdocstrings>=0.13.6
    mkdocs-material>=6.1.5

[options.entry_points]
console_scripts =
    codevidgen = code_video_cli:main
